root/etc/iptables/iptables.rules
*nat
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
-A POSTROUTING -s 192.168.0.0/16 -o usb0 -j MASQUERADE
COMMIT

*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [0:0]
:LOGDROP - [0:0]

-A INPUT -i lo -j ACCEPT
-A INPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A INPUT -m conntrack --ctstate INVALID -j LOGDROP

# DHCP from LAN
-A INPUT -i eth0 -p udp -m udp --sport 67:68 --dport 67:68 -j ACCEPT

# Ping from LAN
-A INPUT -i eth0 -p icmp --icmp-type echo-request -j ACCEPT

# DNS req. from LAN
-A INPUT -i eth0 -p udp --dport 53 -j ACCEPT

# SSH from LAN
-A INPUT -i eth0 -p tcp --dport 22 -m state --state NEW,ESTABLISHED -j ACCEPT

# HTTP from LAN
-A INPUT -i eth0 -p tcp --dport 80 -m state --state NEW -j ACCEPT



-A FORWARD -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -i eth0 -j ACCEPT

-A LOGDROP -j LOG --log-level info
-A LOGDROP -j DROP

COMMIT
